fix(rendered): Double scrollbar

--- a/packages/uhk-web/src/app/app.component.scss
+++ b/packages/uhk-web/src/app/app.component.scss
@@ -32,7 +32,8 @@
 }
 
 main-app {
-    min-height: 100vh;
+    min-height: 100%;
+    height: 100%;
     width: 100%;
     display: block;
     position: relative;
