--- a/packages/uhk-web/src/app/components/device/configuration/device-configuration.component.scss
+++ b/packages/uhk-web/src/app/components/device/configuration/device-configuration.component.scss
@@ -2,6 +2,7 @@
     overflow-y: auto;
     display: block;
     height: 100%;
+    width: 100%;
 
     p {
         margin: 1.5rem 0;
