--- a/packages/uhk-web/src/app/components/device/mouse-speed/mouse-speed.component.scss
+++ b/packages/uhk-web/src/app/components/device/mouse-speed/mouse-speed.component.scss
@@ -2,4 +2,6 @@
     overflow-y: auto;
     display: block;
     height: 100%;
+    width: 100%;
+
 }
